[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Hikaru Nakashima <nakashima.alg57@gmail.com>"]
edition = "2021"
repository = "https://github.com/nakashima-hikaru/qlab"
license = "MIT"
keywords = ["finance"]
categories = ["finance"]

[workspace.dependencies]
num-traits = "0.2.17"

qlab-error = { version = "0.1.0", path = "crates/qlab-error", default-features = false }
qlab-time = { version = "0.1.0", path = "crates/qlab-time", default-features = false }
qlab-termstructure = { version = "0.1.0", path = "crates/qlab-termstructure", default-features = false }
qlab-instrument = { version = "0.1.0", path = "crates/qlab-instrument", default-features = false }
qlab-math = { version = "0.1.0", path = "crates/qlab-math", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"