[workspace]
resolver = "2"
members = [
    "crates/*",
    "third-parties/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Hikaru Nakashima <nakashima.alg57@gmail.com>"]
edition = "2021"
repository = "https://github.com/nakashima-hikaru/qlab"
license-file = "LICENSE"
keywords = ["finance"]
categories = ["finance"]

[workspace.dependencies]
num-traits = "0.2.19"
chrono = "0.4.38"
thiserror = "1.0.53"

qlab-error = { version = "0.1.0", path = "crates/qlab-error", default-features = false }
qlab-time = { version = "0.1.0", path = "crates/qlab-time", default-features = false }
qlab-termstructure = { version = "0.1.0", path = "crates/qlab-termstructure", default-features = false }
qlab-instrument = { version = "0.1.0", path = "crates/qlab-instrument", default-features = false }
qlab-math = { version = "0.1.0", path = "crates/qlab-math", default-features = false }

calendar = { version = "0.1.0", path = "third-parties/calendar", default-features = false }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
cargo = { level = "warn", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 1 }
