[package]
name = "qlab-instrument"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Market instruments for the qlab"

[dependencies]
num-traits = { workspace = true }
qlab-time = { workspace = true }
qlab-termstructure = { workspace = true }
qlab-error = { workspace = true }
qlab-math = { workspace = true }

[lints]
workspace = true