[package]
name = "qlab-math"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Mathematics related code for the qlab"

[dependencies]
num-traits = { workspace = true }
qlab-error = { workspace = true }

[lints]
workspace = true
