[package]
name = "qlab-math"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Mathematics related code for the qlab"

[dependencies]
num-traits = { workspace = true }
qlab-error = { workspace = true }
spline-interpolation = { version = "0.1.0", path = "src/interpolation/spline-interpolation", default-features = false }

[lints]
workspace = true
