[package]
name = "qlab-math"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Mathematics related code for the qlab"

[dependencies]
qlab-error = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
nalgebra = "0.32.5"

[lints]
workspace = true

