[package]
name = "qlab-termstructure"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Term structure objects for the qlab"

[dependencies]
num-traits = "0.2.17"
qlab-time = { workspace = true }
qlab-error = { workspace = true }

[lints]
workspace = true