[package]
name = "qlab-termstructure"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Term structure objects for the qlab"

[dependencies]
num-traits = { workspace = true }
qlab-time = { workspace = true }
qlab-error = { workspace = true }
qlab-math = { workspace = true }

[lints]
workspace = true