[package]
name = "qlab-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Time related code for the qlab"

[dependencies]
qlab-error = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
calendar = { workspace = true }

[lints]
workspace = true