[package]
name = "qlab"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "A Quantitative Finance library implemented in Rust."

[dependencies]
qlab-error = { workspace = true }
qlab-time = { workspace = true }
qlab-termstructure = { workspace = true }
qlab-instrument = { workspace = true }

[lints]
workspace = true