[package]
name = "calendar"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Business days library"

[dependencies]
chrono = { workspace = true }
